examples/test/testpolicy18729.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18729
  namespace: namespace91
spec:
  podSelector:
    matchLabels:
      key40: value36
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key15: value14
          key30: value47
      podSelector:
        matchLabels:
          key3: value18
          key37: value2
